--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,9 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-date-picker": "^10.6.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.6"
   },
